--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ footer {
 
 @media (min-width: 768px) {
   header {
-    background-color: ;
+    background-color: #DB7570;
   }
 
   #column-1 {
@@ -78,6 +78,10 @@ footer {
   footer {
     background-color: #C5B29C;
   }
+
+  .col-3 {
+    width: 50%;
+  }
   
 }
 
@@ -85,7 +89,7 @@ footer {
 /*---------- Desktops ----------*/
 @media (min-width: 1200px) {
   header {
-    background-color: ;
+    background-color: #DB7570;
   }
 
   #column-1 {
@@ -102,6 +106,10 @@ footer {
 
   footer {
     background-color: #C5B29C;
+  }
+
+  .col-3 {
+    width: 33.3%;
   }
    
 }
